2004-03-08  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ps-print.

2004-03-02  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mmm-mode prog-modes.

	* Packages released: mmm-modes prog-modes.

2004-02-20  Norbert Koch  <viteno@xemacs.org>

	* Packages released: hyperbole ediff.

2004-02-17  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ecb.

2004-02-16  Norbert Koch  <viteno@xemacs.org>

	* MAINTAINERS: Skip Montanaro now maintains the package.

2004-02-16  Norbert Koch  <viteno@xemacs.org>

	* Packages released: python-modes ecb xemacs-base x-symbol.

2004-02-11  Norbert Koch  <viteno@xemacs.org>

	* Packages released: c-support fortran-modes.

2004-02-09  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ecb ecrypto.

2004-02-03  Norbert Koch  <viteno@xemacs.org>

	* MAINTAINERS: Uwe Brauer now is the x-symbol package-maintainer.

2004-02-02  Norbert Koch  <viteno@xemacs.org>

	* Sumo packages released.

2004-01-30  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ess.

2004-01-27  Norbert Koch  <viteno@xemacs.org>

	* Packages released:   gnus xemacs-base  prog-modes  calendar sgml
	mule-base.

2004-01-26  Norbert Koch  <viteno@xemacs.org>

	* Packages released: prog-modes.

2004-01-20  Norbert Koch  <viteno@xemacs.org>

	* Packages released: erc zenirc.

	* Packages released: erc zenirc.

2004-01-19  Norbert Koch  <viteno@xemacs.org>

	* Packages released: erc.

2004-01-17  Norbert Koch  <viteno@xemacs.org>

	* Packages released: liece gnus mailcrypt ecrypto sieve.

2004-01-14  Jerry James  <james@xemacs.org>

	* find-macro-err.awk: Output the type of definition (defmacro,
	defsubst, etc.).
	* gen-macro-list.awk: Ditto.  Skip definitions in comments and
	strings.  Strip trailing parentheses from macro names.

2004-01-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ispell.

2004-01-13  Norbert Koch  <viteno@xemacs.org>

	* Packages released: os-utils xemacs-devel.
