@@ -196,8 +196,10 @@
     ("x-symbol" . "xemacs-packages")
     ("xemacs-base" . "xemacs-packages")
     ("xemacs-devel" . "xemacs-packages")
+    ("xlib" . "xemacs-packages")
     ("xslide" . "xemacs-packages")
     ("xslt-process" . "xemacs-packages")
+    ("xwem" . "xemacs-packages")
     ("zenirc" . "xemacs-packages")
     ;; mule-packages
     ("edict" . "mule-packages")
@@ -232,8 +234,9 @@
 	       (equal package "lookup")
 	       (equal package "mule-ucs")
 	       (equal package "tramp")
+               (equal package "w3")
 	       (equal package "x-symbol")
-               (equal package "w3"))
+	       (equal package "xlib"))
 	   (expand-file-name "lisp" (file-name-as-directory dir)))
 	  ((equal package "mew")
 	   (expand-file-name "mew" (file-name-as-directory dir)))
