@@ -1,3 +1,11 @@
+2004-03-09  Norbert Koch  <viteno@xemacs.org>
+
+	* package-compile.el:
+	* xemacs-packages/Makefile: New packages xlib, xwem
+
+	* MAINTAINERS: Add maintainer for these packages: Zajcev Evgeny.
+	Update maintainership for ispell: Kenny Stevens.
+
 2004-03-08  Norbert Koch  <viteno@xemacs.org>
 
 	* Packages released: ps-print.
